fix canvas drawing distortion, resize canvas dynamically using window width
bug: canvas drawing not scaling up/down

--- a/public/app.css
+++ b/public/app.css
@@ -43,9 +43,6 @@
 canvas {
 	margin: 2px;
 	margin-top: 5px;
-	width: 360px;
-	min-width: 360px;
-	height: 240px;
 	background-color: white;
 }
 
